@@ -1,7 +1,6 @@
 package br.edu.ufape.plataforma.mentoria.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -47,8 +46,8 @@ public class SessionService implements SessionServiceInterface {
         Mentor mentor = mentorRepository.findById(sessionDTO.getMentorId())
                 .orElseThrow(() -> new EntityNotFoundException(Mentor.class, sessionDTO.getMentorId()));
 
-        Mentored mentored = mentoredRepository.findById(sessionDTO.getMentoredID())
-                .orElseThrow(() -> new EntityNotFoundException(Mentored.class, sessionDTO.getMentoredID()));
+        Mentored mentored = mentoredRepository.findById(sessionDTO.getMentoredId())
+                .orElseThrow(() -> new EntityNotFoundException(Mentored.class, sessionDTO.getMentoredId()));
 
         if (mentor.getId().equals(mentored.getId())) {
             throw new IllegalArgumentException("Mentor e Mentorado não podem ser a mesma pessoa.");
@@ -68,6 +67,7 @@ public class SessionService implements SessionServiceInterface {
         existingSession.setTime(sessionDTO.getTime());
         existingSession.setMeetingTopic(sessionDTO.getMeetingTopic());
         existingSession.setLocation(sessionDTO.getLocation());
+        existingSession.setStatus(sessionDTO.getStatus()); // Corrige atualização do status
 
         return sessionMapper.toDTO(sessionRepository.save(existingSession));
     }
@@ -121,7 +121,7 @@ public class SessionService implements SessionServiceInterface {
 
         List<Session> sessions = sessionRepository.findByMentorIdAndMentoredId(mentorId, mentoredId);
 
-        return sessions.stream().map(sessionMapper::toDTO).collect(Collectors.toList());
+        return sessions.stream().map(sessionMapper::toDTO).toList();
     }
 
     @Override
@@ -131,7 +131,7 @@ public class SessionService implements SessionServiceInterface {
 
         List<Session> sessions = sessionRepository.findByMentorId(mentorId);
 
-        return sessions.stream().map(sessionMapper::toDTO).collect(Collectors.toList());
+        return sessions.stream().map(sessionMapper::toDTO).toList();
     }
 
     @Override
@@ -141,13 +141,13 @@ public class SessionService implements SessionServiceInterface {
 
         List<Session> sessions = sessionRepository.findByMentoredId(mentoredId);
 
-        return sessions.stream().map(sessionMapper::toDTO).collect(Collectors.toList());
+        return sessions.stream().map(sessionMapper::toDTO).toList();
     }
 
     @Override
     public List<SessionDTO> findAll() {
         return sessionRepository.findAll().stream()
                 .map(sessionMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
